# patientrack_backend

./: .gitignore  fake_records.py  manage.py  pyproject.toml  zappa_settings.json
authentication/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_email_checked.py
device/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
device/migrations/: 0001_initial.py  0002_initial.py  0003_alter_devicetype_manufacturer_and_more.py  0004_alter_device_last_updated_by_and_more.py  0005_variable_identifier.py  0006_alter_variable_identifier.py  0007_variable_css_class_suffix_variable_icon.py  0008_variable_color.py
facility/: admin.py  models.py
facility/migrations/: 0001_initial.py  0002_alter_facility_last_updated_by.py
followup/: admin.py  forms.py  models.py  urls.py  views.py
followup/migrations/: 0001_initial.py  0002_initial.py  0003_alter_followup_last_updated_by.py
main/: constants.py  forms.py  messages.py  models.py  process_iot_event.py  s3boto3.py  utils.py  views.py
monitoring/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
my_pwa/: apps.py  urls.py  views.py
patient/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
patientrack/: settings.py  urls.py  wsgi.py
report/: excel_generator.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
staff/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
templates/: base_form.html  base_list.html  base_list_.html  index.html  index_inicial.html  monitoreo.html
(+71 files in other folders)
