[tool.poetry]
name = "patientrack-backend"
version = "0.1.0"
description = ""
authors = ["giancarloprieto <edison.prieto@simetrik.com>"]
readme = "README.md"
packages = [{include = "patientrack_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.6"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
django-storages = "^1.14.2"
boto3 = "^1.33.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
